--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
             <a href="#">Pricing</a>
             <a href="#">Blog</a>
             <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
       </div>
       <!-------^^^  right nav ^^^--------->
 
