--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <a href="#">About</a>
             <a href="#">Blog</a>
             <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
+            <a href="#">About</a>
             
             
 
